--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "symfony/webapp-pack": "*",
         "symfony/yaml": "7.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+      "ext-pdo": "*"
     },
     "config": {
         "allow-plugins": {
