--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ composer.lock
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+.github/*
+.github/
