--- a/.env
+++ b/.env
@@ -25,9 +25,8 @@ APP_SECRET=17fec7d8b0d5923c128676a4196e4a77
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-#DATABASE_URL=sqlsrv://teroz:vff267dqwXp2G^@desasqlserverteroz.database.windows.net:1433/desaTeroz?charset=UTF-8
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL=postgresql://teroz:vYwk74%23JRQF@tT@postgreteroz.postgres.database.azure.com:5432/desaTeroz
+DATABASE_URL=postgresql://user:password@host:5432/database
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
